Added mysql database for the reserved dates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,17 @@ spring.messages.encoding=UTF-8
 
 spring.web.resources.static-locations=classpath:/static/
 
+spring.jpa.hibernate.ddl-auto=update
+
+
 
 server.port=${SERVER_PORT:8080}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.security.user.name=${SPRING_SECURITY_USER}
+spring.security.user.password=${SPRING_SECURITY_PASSWORD}
+
 
 
 
