--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=www
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
+server.address=0.0.0.0
 
 spring.web.resources.static-locations=classpath:/static/
 
