extracted owners phone number and email address to environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.security.user.name=${SPRING_SECURITY_USER}
 spring.security.user.password=${SPRING_SECURITY_PASSWORD}
+OWNER_PHONE_NUMBER=${OWNER_PHONE_NUMBER}
+OWNER_EMAIL_ADDRESS=${OWNER_EMAIL_ADDRESS}
+
+
 
 
 
