--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.security.user.name=${SPRING_SECURITY_USER}
 spring.security.user.password=${SPRING_SECURITY_PASSWORD}
 OWNER_PHONE_NUMBER=${OWNER_PHONE_NUMBER}
 OWNER_EMAIL_ADDRESS=${OWNER_EMAIL_ADDRESS}
+GOOGLE_MAPS_LINK=${GOOGLE_MAPS_LINK}
+
 
 
 
