--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.address=0.0.0.0
 spring.web.resources.static-locations=classpath:/static/
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 
